Fix spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ html {
   line-height: 1.5;
 }
 
-*,*::before, *::after {
+*, *::before, *::after {
   box-sizing: inherit;
 }
 
@@ -13,7 +13,7 @@ body {
 }
 
 h2 {
-  font-family: "Oswald", sans-serif;
+  font-family: Oswald, sans-serif;
   color: #6f00e7;
   font-size: 2rem;
   margin: 0;
